<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_dialog">

    <ImageView
    android:id="@+id/icon_remove"
    android:layout_width="70dp"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_round_remove_24"
    android:scaleType="centerCrop"
    android:layout_gravity="center|top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <ImageView
            android:id="@+id/icon_close"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24"
            android:scaleType="centerInside"
            android:layout_gravity="center|top"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/medicamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/medicamento"
            android:textSize="25sp"
            android:padding="8dp"
            android:textColor="@color/purple_300"
            android:drawableLeft="@drawable/icon_comprimido"
            android:drawablePadding="10dp"/>
        <TextView
            android:id="@+id/alimentacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/alimentacao"
            android:textSize="25sp"
            android:padding="8dp"
            android:textColor="@color/purple_300"
            android:drawableLeft="@drawable/icon_comer"
            android:drawablePadding="10dp"/>
        <TextView
            android:id="@+id/higiene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/higiene"
            android:textSize="25sp"
            android:padding="8dp"
            android:textColor="@color/purple_300"
            android:drawableLeft="@drawable/icon_banho"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/lazer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/lazer"
            android:textSize="25sp"
            android:padding="8dp"
            android:textColor="@color/purple_300"
            android:drawableLeft="@drawable/icon_lazer"
            android:drawablePadding="10dp"/>


    </LinearLayout>

</LinearLayout>