<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddHigiene">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_400"
        >



        <LinearLayout
            android:id="@+id/frame_layout_medicamento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/icon_banho" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:text="@string/higiene"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/purple_300"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/text_higiene_forms"
                style="@style/Edit_Text_forms"
                android:background="@drawable/custom_google"
                android:text="Tomar Banho"
                android:padding="20dp"
                android:textColor="@color/purple_200"/>

            <RadioGroup
                android:id="@+id/radiogroup_hig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    style="@style/text_forms"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="15dp"
                    android:text="Com que frequência deseja ser lembrado(a)?"
                    />


                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text_forms"
                    style="@style/Edit_Text_forms"
                    android:textColor="@color/purple_300"
                    android:text="@string/uma_vez_por_dia_24h"
                    android:padding="10dp"
                    android:buttonTint="@color/purple_300"
                    android:layoutDirection="rtl"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text_forms"
                    style="@style/Edit_Text_forms"
                    android:textColor="@color/purple_300"
                    android:padding="10dp"
                    android:text="@string/duas_vezes_no_dia_12h_12h"
                    android:buttonTint="@color/purple_300"
                    android:layoutDirection="rtl"/>

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text_forms"
                    style="@style/Edit_Text_forms"
                    android:textColor="@color/purple_300"
                    android:padding="10dp"
                    android:text="@string/tr_s_vezes_no_dia_8h_8h"
                    android:buttonTint="@color/purple_300"
                    android:layoutDirection="rtl"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/text_forms"
                android:text="Horário de início do alarme"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TimePicker
                android:id="@+id/startTimePicker"
                android:background="@drawable/custom_edit_text_forms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_salvar_hig"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_bottons"
                android:text="Salvar"
                android:textAllCaps="true"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

